--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -2,34 +2,40 @@ random_state: 4200
 retrain: True
 # List of models to include in the experiment
 include_models:
-  - XGB  # Extreme Gradient Boosting
+  #- XGB  # Extreme Gradient Boosting
   #- MLP  # Multi-Layer Perceptron
-  - TabNet  # TabNet Classifier 
-  - GATE 
+  #- TabNet  # TabNet Classifier 
+  #- GATE 
   #- resnet18
   #- S1DCNN
-  - CategoryEmbedding
-  - FTTransformer
-  - GANDALF
-  - Node
-  - TabTransformer
-  - AutoInt
+  #- CategoryEmbedding
+  #- FTTransformer
+  #- GANDALF
+  #- Node
+  #- TabTransformer
+  #- AutoInt
   ###- squeezenet
 
 # List of datasets to include in the experiment
 include_datasets:
   #- creditcard  # Credit card fraud dataset
-  #- iris        # Iris flower dataset
-  - titanic
+  - iris        # Iris flower dataset
+  #- titanic
   #- bufix
-  - breastcancer 
+  #- breastcancer 
   #- housing
-  - ageconditions
+  #- ageconditions
   #- adult
   #- heloc
   #- covertype
 
 model_configs:
+
+  autoint:
+    execution_mode: hyperopt
+    normalize_features: mean_std
+    encode_categorical: False  #for dataloader 
+    return_extra_info: True # for dataloader
 
   node:
     execution_mode: hyperopt
