--- a/requirements.txt
+++ b/requirements.txt
@@ -26,10 +26,11 @@ cloudpickle==2.2.1
 comm==0.1.3
 contourpy==1.1.0
 cycler==0.11.0
-databricks-cli==0.17.7
+datasets==2.14.0
 debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
+dill==0.3.7
 docker==6.1.3
 docker-pycreds==0.4.0
 einops==0.6.1
@@ -51,6 +52,7 @@ google-auth-oauthlib==1.0.0
 greenlet==2.0.2
 grpcio==1.56.0
 gunicorn==20.1.0
+huggingface-hub==0.16.4
 hyperopt==0.2.7
 idna==3.4
 importlib-metadata==6.8.0
@@ -85,9 +87,9 @@ matplotlib==3.7.2
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==2.0.5
-mlflow==2.4.2
 mpmath==1.3.0
 multidict==6.0.4
+multiprocess==0.70.15
 nbclassic==1.0.0
 nbclient==0.8.0
 nbconvert==7.6.0
@@ -109,6 +111,7 @@ patsy==0.5.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==10.0.0
+pip-check==2.8.1
 platformdirs==3.9.1
 prometheus-client==0.17.1
 prompt-toolkit==3.0.39
@@ -136,7 +139,7 @@ pyzmq==25.1.0
 qtconsole==5.4.3
 QtPy==2.3.1
 querystring-parser==1.2.4
--e git+https://github.com/BoomHSB/RealWTab.git@adcde798a293608025f7335cb9d503de3207048c#egg=RealWTab
+-e git+https://github.com/BoomHSB/WTabRun.git@f35dc8403b532c3d43bcd77d83f0d95313024dfe#egg=RealWTab
 referencing==0.29.1
 requests==2.31.0
 requests-oauthlib==1.3.1
@@ -161,23 +164,25 @@ stack-data==0.6.2
 statsmodels==0.14.0
 sympy==1.12
 tab-transformer-pytorch==0.2.6
+tabpfn==0.1.9
 tabulate==0.9.0
 tensorboard==2.13.0
 tensorboard-data-server==0.7.1
 tensorboardX==2.6.1
 terminado==0.17.1
+terminaltables==3.1.10
 threadpoolctl==3.2.0
 tinycss2==1.2.1
-torch==2.0.1
-torchmetrics==1.0.1
-torchvision==0.15.2
+torch==1.13.1
+torchmetrics==0.11.4
+torchvision==0.14.1
 tornado==6.3.2
 tqdm==4.65.0
 traitlets==5.9.0
 typing_extensions==4.7.1
 tzdata==2023.3
 uri-template==1.3.0
-urllib3==2.0.3
+urllib3==1.26.11
 wandb==0.15.5
 wcwidth==0.2.6
 webcolors==1.13
@@ -186,5 +191,6 @@ websocket-client==1.6.1
 Werkzeug==2.3.6
 widgetsnbextension==4.0.8
 xgboost==1.7.6
+xxhash==3.2.0
 yarl==1.9.2
 zipp==3.16.2
