fix import for new logger format

--- a/configuration/experiment_runs.yml
+++ b/configuration/experiment_runs.yml
@@ -484,237 +484,483 @@
   model: xgb
   best_params: {}
   param_grid:
-    outer_params: *id001
-    n_estimators: *id002
-    validation_fraction: *id003
-    max_bin: *id004
-    tree_method: *id005
-    max_depth: *id006
-    learning_rate: *id007
-    subsample: *id008
-    colsample_bytree: *id009
-    min_child_weight: *id010
-    alpha: *id011
-    gamma: *id012
-    lambda: *id013
+    outer_params: &id092
+      hyperopt_evals: 100
+    n_estimators: &id093
+    - 100
+    - 1100
+    validation_fraction: &id094
+    - 0.2
+    max_bin: &id095
+    - 128
+    - 512
+    tree_method: &id096
+    - auto
+    max_depth: &id097
+    - 4
+    - 12
+    learning_rate: &id098
+    - 0.1
+    - 0.33
+    subsample: &id099
+    - 0.7
+    - 1.0
+    colsample_bytree: &id100
+    - 0.7
+    - 1.0
+    min_child_weight: &id101
+    - 1
+    - 10
+    alpha: &id102
+    - 0.0
+    - 5.0
+    gamma: &id103
+    - 0.0
+    - 5.0
+    lambda: &id104
+    - 0.0
+    - 5.0
 - dataset: housing
   model: mlp
   best_params: {}
   param_grid:
-    outer_params: *id014
-    hidden_layer_sizes: *id015
-    activation: *id016
-    solver: *id017
-    alpha: *id018
-    learning_rate_init: *id019
-    beta_1: *id020
-    beta_2: *id021
-    n_iter_no_change: *id022
-    validation_fraction: *id023
-    max_iter: *id024
-    batch_size: *id025
+    outer_params: &id105
+      cv_iterations: 10
+      early_stopping: true
+      cv_size: 5
+    hidden_layer_sizes: &id106
+    - - 16
+      - 32
+    - - 16
+      - 8
+    - - 32
+      - 16
+    - - 45
+      - 20
+    activation: &id107
+    - relu
+    - tanh
+    - logistic
+    solver: &id108
+    - adam
+    - lbfgs
+    alpha: &id109
+    - 0.0001
+    - 0.001
+    - 0.01
+    learning_rate_init: &id110
+    - 0.001
+    - 0.01
+    - 0.1
+    beta_1: &id111
+    - 0.9
+    - 0.99
+    - 0.8
+    beta_2: &id112
+    - 0.999
+    - 0.9
+    n_iter_no_change: &id113
+    - 3
+    - 5
+    validation_fraction: &id114
+    - 0.1
+    - 0.15
+    - 0.2
+    max_iter: &id115
+    - 1000
+    - 2000
+    batch_size: &id116
+    - 256
+    - 512
+    - 1024
+    - 2048
 - dataset: housing
   model: resnet
   best_params: {}
   param_grid:
-    outer_params: *id026
-    learning_rate: *id027
-    batch_size: *id028
-    validation_fraction: *id029
-    early_stopping_patience: *id030
-    scheduler_factor: *id031
-    scheduler_patience: *id032
+    outer_params: &id117
+      hyperopt_evals: 10
+      num_epochs: 1000
+      early_stopping: true
+    learning_rate: &id118
+    - 0.0001
+    - 0.001
+    batch_size: &id119
+    - 256
+    - 512
+    - 1024
+    - 2048
+    validation_fraction: &id120
+    - 0.1
+    - 0.3
+    early_stopping_patience: &id121
+    - 3
+    - 5
+    scheduler_factor: &id122
+    - 0.1
+    - 0.9
+    scheduler_patience: &id123
+    - 3
+    - 5
 - dataset: housing
   model: s1dcnn
   best_params: {}
   param_grid:
-    outer_params: *id033
-    batch_size: *id034
-    validation_fraction: *id035
-    early_stopping_patience: *id036
-    learning_rate: *id037
-    hidden_size: *id038
-    scheduler_factor: *id039
-    scheduler_patience: *id040
+    outer_params: &id124
+      hyperopt_evals: 10
+      num_epochs: 1000
+      early_stopping: true
+      shuffle: true
+    batch_size: &id125
+    - 256
+    - 512
+    - 1024
+    - 2048
+    validation_fraction: &id126
+    - 0.1
+    - 0.3
+    early_stopping_patience: &id127
+    - 3
+    - 5
+    learning_rate: &id128
+    - 0.01
+    - 0.0001
+    hidden_size: &id129
+    - 1024
+    - 2048
+    - 4096
+    scheduler_factor: &id130
+    - 0.1
+    - 0.9
+    scheduler_patience: &id131
+    - 4
+    - 7
 - dataset: housing
   model: tabnet
   best_params: {}
   param_grid:
-    outer_params: *id041
-    learning_rate: *id042
-    early_stopping_patience: *id043
-    virtual_batch_size_ratio: *id044
-    batch_size: *id045
-    weights: *id046
-    mask_type: *id047
-    n_d: *id048
-    n_steps: *id049
-    gamma: *id050
-    cat_emb_dim: *id051
-    n_independent: *id052
-    n_shared: *id053
-    lambda_sparse: *id054
-    momentum: *id055
-    clip_value: *id056
-    optimizer_fn: *id057
-    scheduler_fn: *id058
+    outer_params: &id132
+      max_epochs: 1000
+      early_stopping_tolerance: 1.0e-06
+      hyperopt_evals: 10
+      val_size: 0.2
+      auto_lr_find: false
+    learning_rate: &id133
+    - 0.001
+    - 0.0001
+    early_stopping_patience: &id134
+    - 3
+    - 5
+    virtual_batch_size_ratio: &id135
+    - 0.125
+    - 0.25
+    - 0.5
+    batch_size: &id136
+    - 256
+    - 512
+    - 1024
+    weights: &id137
+    - 0
+    - 1
+    mask_type: &id138
+    - sparsemax
+    - entmax
+    n_d: &id139
+    - 8
+    - 16
+    n_steps: &id140
+    - 3
+    - 10
+    gamma: &id141
+    - 1.0
+    - 2.0
+    cat_emb_dim: &id142
+    - 1
+    - 3
+    n_independent: &id143
+    - 1
+    - 5
+    n_shared: &id144
+    - 1
+    - 5
+    lambda_sparse: &id145
+    - 0.001
+    - 0.01
+    momentum: &id146
+    - 0.001
+    - 0.4
+    clip_value: &id147
+    - 1
+    - 2
+    optimizer_fn: &id148
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 0.1
+    scheduler_fn: &id149
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
 - dataset: housing
   model: gate
   best_params: {}
   param_grid:
-    outer_params: *id059
-    learning_rate: *id060
-    early_stopping_patience: *id061
-    batch_size: *id062
-    tree_depth: *id063
-    num_trees: *id064
-    chain_trees: *id065
-    gflu_stages: *id066
-    optimizer_fn: *id067
-    scheduler_fn: *id068
+    outer_params: &id150
+      hyperopt_evals: 10
+      auto_lr_find: false
+      max_epochs: 1000
+      val_size: 0.2
+    learning_rate: &id151
+    - 0.001
+    - 0.0001
+    early_stopping_patience: &id152
+    - 3
+    - 5
+    batch_size: &id153
+    - 256
+    - 512
+    - 1024
+    tree_depth: &id154
+    - 4
+    - 7
+    num_trees: &id155
+    - 8
+    - 22
+    chain_trees: &id156
+    - false
+    gflu_stages: &id157
+    - 2
+    - 8
+    optimizer_fn: &id158
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 0.1
+    scheduler_fn: &id159
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
 - dataset: housing
   model: fttransformer
   best_params: {}
   param_grid:
-    outer_params: *id069
-    learning_rate: *id070
-    early_stopping_patience: *id071
-    batch_size: *id072
-    input_embed_dim: *id073
-    embedding_initialization: *id074
-    embedding_bias: *id075
-    share_embedding: *id076
-    share_embedding_strategy: *id077
-    shared_embedding_fraction: *id078
-    attn_feature_importance: *id079
-    num_heads: *id080
-    num_attn_blocks: *id081
-    transformer_head_dim: *id082
-    attn_dropout: *id083
-    add_norm_dropout: *id084
-    ff_dropout: *id085
-    ff_hidden_multiplier: *id086
-    transformer_activation: *id087
-    embedding_dropout: *id088
-    batch_norm_continuous_input: *id089
-    optimizer_fn: *id090
-    scheduler_fn: *id091
+    outer_params: &id160
+      max_epochs: 1000
+      early_stopping_tolerance: 1.0e-06
+      hyperopt_evals: 10
+      val_size: 0.2
+      auto_lr_find: false
+    learning_rate: &id161
+    - 0.0005
+    - 0.001
+    - 0.002
+    early_stopping_patience: &id162
+    - 3
+    - 5
+    batch_size: &id163
+    - 256
+    - 512
+    - 1024
+    - 2048
+    input_embed_dim: &id164
+    - 16
+    - 32
+    - 64
+    embedding_initialization: &id165
+    - kaiming_uniform
+    - kaiming_normal
+    embedding_bias: &id166
+    - true
+    - false
+    share_embedding: &id167
+    - true
+    - false
+    share_embedding_strategy: &id168
+    - add
+    - fraction
+    - add
+    shared_embedding_fraction: &id169
+    - 0.1
+    - 0.25
+    - 0.5
+    attn_feature_importance: &id170
+    - true
+    - false
+    num_heads: &id171
+    - 6
+    - 8
+    - 10
+    num_attn_blocks: &id172
+    - 4
+    - 6
+    - 8
+    transformer_head_dim: &id173
+    - 64
+    - 128
+    attn_dropout: &id174
+    - 0.05
+    - 0.1
+    - 0.15
+    add_norm_dropout: &id175
+    - 0.05
+    - 0.1
+    - 0.15
+    ff_dropout: &id176
+    - 0.05
+    - 0.1
+    - 0.15
+    ff_hidden_multiplier: &id177
+    - 3
+    - 4
+    - 5
+    transformer_activation: &id178
+    - ReLU
+    - GEGLU
+    - SwiGLU
+    embedding_dropout: &id179
+    - 0.05
+    - 0.1
+    - 0.15
+    batch_norm_continuous_input: &id180
+    - false
+    - true
+    optimizer_fn: &id181
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 0.3
+    scheduler_fn: &id182
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 4
+        - 7
 - dataset: adult
   model: xgb
   best_params: {}
   param_grid:
-    outer_params: *id001
-    n_estimators: *id002
-    validation_fraction: *id003
-    max_bin: *id004
-    tree_method: *id005
-    max_depth: *id006
-    learning_rate: *id007
-    subsample: *id008
-    colsample_bytree: *id009
-    min_child_weight: *id010
-    alpha: *id011
-    gamma: *id012
-    lambda: *id013
+    outer_params: *id092
+    n_estimators: *id093
+    validation_fraction: *id094
+    max_bin: *id095
+    tree_method: *id096
+    max_depth: *id097
+    learning_rate: *id098
+    subsample: *id099
+    colsample_bytree: *id100
+    min_child_weight: *id101
+    alpha: *id102
+    gamma: *id103
+    lambda: *id104
 - dataset: adult
   model: mlp
   best_params: {}
   param_grid:
-    outer_params: *id014
-    hidden_layer_sizes: *id015
-    activation: *id016
-    solver: *id017
-    alpha: *id018
-    learning_rate_init: *id019
-    beta_1: *id020
-    beta_2: *id021
-    n_iter_no_change: *id022
-    validation_fraction: *id023
-    max_iter: *id024
-    batch_size: *id025
+    outer_params: *id105
+    hidden_layer_sizes: *id106
+    activation: *id107
+    solver: *id108
+    alpha: *id109
+    learning_rate_init: *id110
+    beta_1: *id111
+    beta_2: *id112
+    n_iter_no_change: *id113
+    validation_fraction: *id114
+    max_iter: *id115
+    batch_size: *id116
 - dataset: adult
   model: resnet
   best_params: {}
   param_grid:
-    outer_params: *id026
-    learning_rate: *id027
-    batch_size: *id028
-    validation_fraction: *id029
-    early_stopping_patience: *id030
-    scheduler_factor: *id031
-    scheduler_patience: *id032
+    outer_params: *id117
+    learning_rate: *id118
+    batch_size: *id119
+    validation_fraction: *id120
+    early_stopping_patience: *id121
+    scheduler_factor: *id122
+    scheduler_patience: *id123
 - dataset: adult
   model: s1dcnn
   best_params: {}
   param_grid:
-    outer_params: *id033
-    batch_size: *id034
-    validation_fraction: *id035
-    early_stopping_patience: *id036
-    learning_rate: *id037
-    hidden_size: *id038
-    scheduler_factor: *id039
-    scheduler_patience: *id040
+    outer_params: *id124
+    batch_size: *id125
+    validation_fraction: *id126
+    early_stopping_patience: *id127
+    learning_rate: *id128
+    hidden_size: *id129
+    scheduler_factor: *id130
+    scheduler_patience: *id131
 - dataset: adult
   model: tabnet
   best_params: {}
   param_grid:
-    outer_params: *id041
-    learning_rate: *id042
-    early_stopping_patience: *id043
-    virtual_batch_size_ratio: *id044
-    batch_size: *id045
-    weights: *id046
-    mask_type: *id047
-    n_d: *id048
-    n_steps: *id049
-    gamma: *id050
-    cat_emb_dim: *id051
-    n_independent: *id052
-    n_shared: *id053
-    lambda_sparse: *id054
-    momentum: *id055
-    clip_value: *id056
-    optimizer_fn: *id057
-    scheduler_fn: *id058
+    outer_params: *id132
+    learning_rate: *id133
+    early_stopping_patience: *id134
+    virtual_batch_size_ratio: *id135
+    batch_size: *id136
+    weights: *id137
+    mask_type: *id138
+    n_d: *id139
+    n_steps: *id140
+    gamma: *id141
+    cat_emb_dim: *id142
+    n_independent: *id143
+    n_shared: *id144
+    lambda_sparse: *id145
+    momentum: *id146
+    clip_value: *id147
+    optimizer_fn: *id148
+    scheduler_fn: *id149
 - dataset: adult
   model: gate
   best_params: {}
   param_grid:
-    outer_params: *id059
-    learning_rate: *id060
-    early_stopping_patience: *id061
-    batch_size: *id062
-    tree_depth: *id063
-    num_trees: *id064
-    chain_trees: *id065
-    gflu_stages: *id066
-    optimizer_fn: *id067
-    scheduler_fn: *id068
+    outer_params: *id150
+    learning_rate: *id151
+    early_stopping_patience: *id152
+    batch_size: *id153
+    tree_depth: *id154
+    num_trees: *id155
+    chain_trees: *id156
+    gflu_stages: *id157
+    optimizer_fn: *id158
+    scheduler_fn: *id159
 - dataset: adult
   model: fttransformer
   best_params: {}
   param_grid:
-    outer_params: *id069
-    learning_rate: *id070
-    early_stopping_patience: *id071
-    batch_size: *id072
-    input_embed_dim: *id073
-    embedding_initialization: *id074
-    embedding_bias: *id075
-    share_embedding: *id076
-    share_embedding_strategy: *id077
-    shared_embedding_fraction: *id078
-    attn_feature_importance: *id079
-    num_heads: *id080
-    num_attn_blocks: *id081
-    transformer_head_dim: *id082
-    attn_dropout: *id083
-    add_norm_dropout: *id084
-    ff_dropout: *id085
-    ff_hidden_multiplier: *id086
-    transformer_activation: *id087
-    embedding_dropout: *id088
-    batch_norm_continuous_input: *id089
-    optimizer_fn: *id090
-    scheduler_fn: *id091
+    outer_params: *id160
+    learning_rate: *id161
+    early_stopping_patience: *id162
+    batch_size: *id163
+    input_embed_dim: *id164
+    embedding_initialization: *id165
+    embedding_bias: *id166
+    share_embedding: *id167
+    share_embedding_strategy: *id168
+    shared_embedding_fraction: *id169
+    attn_feature_importance: *id170
+    num_heads: *id171
+    num_attn_blocks: *id172
+    transformer_head_dim: *id173
+    attn_dropout: *id174
+    add_norm_dropout: *id175
+    ff_dropout: *id176
+    ff_hidden_multiplier: *id177
+    transformer_activation: *id178
+    embedding_dropout: *id179
+    batch_norm_continuous_input: *id180
+    optimizer_fn: *id181
+    scheduler_fn: *id182
