--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -2,12 +2,12 @@ random_state: 4200
 retrain: True
 # List of models to include in the experiment
 include_models:
-  #- XGB  # Extreme Gradient Boosting
-  #- MLP  # Multi-Layer Perceptron
-  #- TabNet  # TabNet Classifier 
+  - XGB  # Extreme Gradient Boosting
+  - MLP  # Multi-Layer Perceptron
+  - TabNet  # TabNet Classifier 
   - GATE 
   - resnet18
-  #- S1DCNN
+  - S1DCNN
   #- CategoryEmbedding
   - FTTransformer
   #- GANDALF
@@ -19,8 +19,8 @@ include_models:
 # List of datasets to include in the experiment
 include_datasets:
   #- creditcard  # Credit card fraud dataset
-  - iris        # Iris flower dataset
-  - titanic
+  #- iris        # Iris flower dataset
+  #- titanic
   #- bufix
   #- breastcancer 
   - housing
