--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -4,28 +4,28 @@ retrain: True
 include_models:
   #- XGB  # Extreme Gradient Boosting
   #- MLP  # Multi-Layer Perceptron
-  #- TabNet  # TabNet Classifier 
-  #- GATE 
+  - TabNet  # TabNet Classifier 
+  - GATE 
   #- resnet18
   #- S1DCNN
-  #- CategoryEmbedding
-  #- FTTransformer
-  #- GANDALF
+  - CategoryEmbedding
+  - FTTransformer
+  - GANDALF
   - Node
-  #- TabTransformer
-  #- AutoInt
+  - TabTransformer
+  - AutoInt
   ###- squeezenet
 
 # List of datasets to include in the experiment
 include_datasets:
   #- creditcard  # Credit card fraud dataset
-  #- iris        # Iris flower dataset
-  #- titanic
+  - iris        # Iris flower dataset
+  - titanic
   #- bufix
   #- breastcancer 
   - housing
   #- ageconditions
-  #- adult
+  - adult
   #- heloc
   #- covertype
 
