--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -4,16 +4,16 @@ retrain: True
 include_models:
   #- XGB  # Extreme Gradient Boosting
   #- MLP  # Multi-Layer Perceptron
-  - TabNet  # TabNet Classifier 
-  - GATE 
+  #- TabNet  # TabNet Classifier 
+  #- GATE 
   #- resnet18
   #- S1DCNN
   - CategoryEmbedding
-  - FTTransformer
-  - GANDALF
-  - Node
-  - TabTransformer
-  - AutoInt
+  #- FTTransformer
+  #- GANDALF
+  #- Node
+  #- TabTransformer
+  #- AutoInt
   ###- squeezenet
 
 # List of datasets to include in the experiment
