--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -20,7 +20,7 @@ include_models:
 include_datasets:
   #- creditcard  # Credit card fraud dataset
   - iris        # Iris flower dataset
-  - titanic
+  #- titanic
   #- bufix
   #- breastcancer 
   - housing
